@@ -1,0 +1,2 @@
+<filename>include_as_sub.html</filename>
+<current_template><%= current_template() %></current_template>
